<resources>
    <string name="app_name" translatable="false">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="url_YP_android_developer" translatable="false">https://practicum.yandex.ru/android-developer/</string>
    <string name="support_email" translatable="false">danil.ciplenkov@yandex.ru</string>
    <string name="subject_support_mail">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="text_support_mail">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="url_offer" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="update">Обновить</string>
    <string name="error_internet">Проблемы со связью.\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="TextErrorInternet">Ничего не нашлось</string>
    <string name="search_history_header">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="no_playlists_created">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="your_media_library_is_empty">Ваша медиатека пуста</string>
    <string name="favourite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="create">Создать</string>
    <string name="playlist_name">Название*</string>
    <string name="description">Описание</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="something_went_wrong">Что-то пошло не так</string>
    <string name="finish_creating_the_playlist">Завершить создание плейлиста?</string>
    <string name="all_unsaved_data_will_be_lost">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="track">трек</string>
    <string name="two_track">трека</string>
    <string name="five_track">треков</string>
    <string name="minute">минута</string>
    <string name="minutes">минуты</string>
    <string name="minutes_genitive">минут</string>

    <string name="delete_track">Удалить трек</string>
    <string name="question_sure_remove_track_from_playlist">Хотите удалить трек из плейлиста?</string>
    <string name="delete">Удалить</string>
    <string name="no_tracklist_in_playlist_shared">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="share">Поделиться</string>
    <string name="edit_information">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="question_sure_delete_playlist">Хотите удалить плейлист "%1"?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="save">Сохранить</string>
    <string name="edit">Редактировать</string>
    <string name="empty_playlist">В этом плейлисте нет треков.</string>


</resources>