<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:theme="@style/Theme.Settings"
    tools:context=".settings.ui.SettingsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/settings"
        app:titleTextAppearance="@style/ToolbarTitle"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/themeSwitcher"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_button_in_activity_settings"
        android:gravity="center_vertical"
        android:paddingHorizontal="16dp"
        android:text="@string/dark_theme"
        android:textSize="@dimen/regular_16"
        android:fontFamily="@font/ys_display_regular"
        android:textFontWeight="400"
        android:thumbTintMode="screen"
        app:trackTint="@drawable/switch_track_selector"
        app:thumbTint="@drawable/switch_thumb_selector"
        android:layout_marginTop="24dp"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/sharing"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_button_in_activity_settings"
        android:drawableEnd="@drawable/light_mode_share"
        android:paddingHorizontal="16dp"
        android:text="@string/share_app"
        android:gravity="center_vertical"
        android:textSize="@dimen/regular_16"
        android:textFontWeight="400"
        android:fontFamily="@font/ys_display_regular"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/support"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_button_in_activity_settings"
        android:drawableEnd="@drawable/light_mode_support"
        android:paddingHorizontal="16dp"
        android:text="@string/write_support"
        android:gravity="center_vertical"
        android:textSize="@dimen/regular_16"
        android:textFontWeight="400"
        android:fontFamily="@font/ys_display_regular"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/user_agreement"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_button_in_activity_settings"
        android:drawableEnd="@drawable/light_mode_arrow_forward"
        android:paddingHorizontal="16dp"
        android:text="@string/user_agreement"
        android:gravity="center_vertical"
        android:textSize="@dimen/regular_16"
        android:textFontWeight="400"
        android:fontFamily="@font/ys_display_regular"/>

</LinearLayout>
