<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_header"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/back"
                android:src="@drawable/light_mode_back_arrow"
                style="@style/ImageInHeaderStyle"/>

            <TextView
                android:text="@string/settings"
                style="@style/HeaderOpenItemMainStyle"/>
        </LinearLayout>
    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="12dp"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_button_in_activity_settings">

            <TextView
                android:text="@string/dark_theme"
                style="@style/ButtonSettingsStyle"/>

            <androidx.appcompat.widget.SwitchCompat
                app:trackTint="@drawable/switch_track_selector"
                app:thumbTint="@drawable/switch_thumb_selector"
                style="@style/MySwitch"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_button_in_activity_settings">

            <TextView
                android:id="@+id/sharing"
                android:text="@string/share_app"
                style="@style/ButtonSettingsStyle"/>

            <ImageView
                android:src="@drawable/light_mode_share"
                style="@style/ImageSettingsStyle"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_button_in_activity_settings">

            <TextView
                android:id="@+id/support"
                android:text="@string/write_support"
                style="@style/ButtonSettingsStyle"/>

            <ImageView
                android:src="@drawable/light_mode_support"
                style="@style/ImageSettingsStyle"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_button_in_activity_settings">

            <TextView
                android:id="@+id/user_agreement"
                android:text="@string/user_agreement"
                style="@style/ButtonSettingsStyle"/>

            <ImageView
                android:src="@drawable/light_mode_arrow_forward"
                style="@style/ImageSettingsStyle"/>
        </FrameLayout>
    </LinearLayout>
</LinearLayout>
