<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_light"
    android:orientation="vertical"
    android:paddingHorizontal="16dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_header">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/medium" />
    </FrameLayout>

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="28dp">

        <Button
            android:id="@+id/search"
            android:foreground="?attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_button"
            android:layout_marginBottom="@dimen/margin_bottom_button"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/search"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/medium"
            app:icon="@drawable/light_mode_search"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/padding_icon"
            app:iconTint="@color/black"
            app:cornerRadius="@dimen/radius_button"/>

        <Button
            android:id="@+id/media_library"
            android:foreground="?attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_button"
            android:layout_marginBottom="@dimen/margin_bottom_button"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/media_library"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/medium"
            app:icon="@drawable/light_mode_media_library"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/padding_icon"
            app:iconTint="@color/black"
            app:cornerRadius="@dimen/radius_button"/>

        <Button
            android:id="@+id/settings"
            android:foreground="?attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_button"
            android:layout_marginBottom="@dimen/margin_bottom_button"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/settings"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/medium"
            app:icon="@drawable/light_mode_settings"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/padding_icon"
            app:iconTint="@color/black"
            app:cornerRadius="@dimen/radius_button"/>
    </LinearLayout>

</LinearLayout>