<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mediaLibrary.ui.PlayListCreateFragment">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="@drawable/ic_button_back"
        app:title="@string/new_playlist"
        app:titleTextAppearance="@style/ToolbarTitle"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        tools:ignore="MissingConstraints" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <ImageView
        android:id="@+id/playlistCover"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="26dp"
        android:clickable="true"
        android:src="@drawable/add_photo"
        app:layout_constraintDimensionRatio="H, 1:1"
        app:layout_constraintBottom_toTopOf="@id/playlist_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <EditText
        android:id="@+id/playlist_name"
        style="@style/PlaylistItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:hint="@string/playlist_name"
        android:imeOptions="actionNext"
        app:layout_constraintEnd_toStartOf="@id/endBorder"
        app:layout_constraintStart_toEndOf="@id/startBorder"
        app:layout_constraintTop_toBottomOf="@id/playlistCover" />

    <TextView
        android:id="@+id/playlist_name_title"
        style="@style/PlaylistItemTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playlist_name"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/playlist_name"
        app:layout_constraintStart_toStartOf="@+id/playlist_name"
        app:layout_constraintTop_toTopOf="@id/playlist_name" />

    <EditText
        android:id="@+id/playlist_description"
        style="@style/PlaylistItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/description"
        android:imeOptions="actionDone"
        app:layout_constraintBottom_toTopOf="@id/create_button"
        app:layout_constraintEnd_toStartOf="@id/endBorder"
        app:layout_constraintStart_toEndOf="@id/startBorder"
        app:layout_constraintTop_toBottomOf="@id/playlist_name"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <TextView
        android:id="@+id/playlist_description_title"
        style="@style/PlaylistItemTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/playlist_description"
        app:layout_constraintStart_toStartOf="@+id/playlist_description"
        app:layout_constraintTop_toTopOf="@id/playlist_description" />


    <Button
        android:id="@+id/create_button"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/button_save"
        android:enabled="false"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/create"
        android:textColor="@color/white"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/startBorder"
        app:layout_constraintEnd_toEndOf="@id/endBorder"
        app:layout_constraintTop_toBottomOf="@id/playlist_description" />

</androidx.constraintlayout.widget.ConstraintLayout>