<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:theme="@style/Theme.Search">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_header"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/back"
                android:src="@drawable/light_mode_back_arrow"
                style="@style/ImageInHeaderStyle"/>

            <TextView
                android:text="@string/search"
                style="@style/HeaderOpenItemMainStyle"/>
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_fl_search"
        android:paddingHorizontal="@dimen/padding_h_fl_search"
        android:paddingVertical="@dimen/padding_v_fl_search">
        <FrameLayout
            android:id="@+id/search_string"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_input_search"
            android:theme="@style/Theme.SearchString">
            <ImageView
                android:id="@+id/icon_search_in_string"
                android:src="@drawable/small_search_icon"
                android:paddingStart="@dimen/start_small_search_icon"
                style="@style/ImageInSearchString"/>
            <EditText
                android:id="@+id/edittext_in_search_string"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/ys_display_regular"
                android:hint="@string/search"
                android:textFontWeight="400"
                android:inputType="text"
                android:maxLines="1"
                android:paddingStart="36dp"
                android:paddingEnd="40dp"
                android:textSize="@dimen/regular_16"
                android:textColor="@color/black"
                android:textCursorDrawable="@drawable/cursor"
                android:background="@android:color/transparent"
                android:imeOptions="actionDone"
                android:singleLine="true"/>
            <ImageView
                android:id="@+id/icon_clear_in_string"
                android:src="@drawable/clear"
                android:paddingHorizontal="12dp"
                android:visibility="gone"
                android:layout_gravity="end"
                style="@style/ImageInSearchString"/>
        </FrameLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTracks"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="16dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/music_track"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/errorSearch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="@dimen/ErrorMarginHorizontal_24dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="@dimen/paddingTopError"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/error_search" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TextErrorInternet"
                style="@style/TextErrorInternet"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/errorInternet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="@dimen/ErrorMarginHorizontal_24dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="@dimen/paddingTopError"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/error_internet" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/error_internet"
                style="@style/TextErrorInternet"/>

            <Button
                android:id="@+id/updateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/update"
                style="@style/ButtonUpdate"/>

        </LinearLayout>

    </FrameLayout>


</LinearLayout>