<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".walkman.ui.WalkmanActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/guideline_top_56dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/guideline_left_right_16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/guideline_left_right_16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_descriptions_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/guideline_bottom_28dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/center_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:src="@drawable/ic_button_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/left_guideline"/>

    <ImageView
        android:id="@+id/imageAlbum"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_8dp"
        android:layout_marginTop="@dimen/_26dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_placeholder_312"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toBottomOf="@+id/top_guideline"
        app:layout_constraintBottom_toTopOf="@id/trackName"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"/>


    <TextView
        android:id="@+id/trackName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/TrackNameTextView"
        app:layout_constraintTop_toBottomOf="@+id/imageAlbum"
        app:layout_constraintBottom_toTopOf="@+id/artistName"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        tools:text="Yesterday (Remastered 2009)" />

    <TextView
        android:id="@+id/artistName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/ArtistNameTextView"
        app:layout_constraintTop_toBottomOf="@+id/trackName"
        app:layout_constraintBottom_toTopOf="@+id/center_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        tools:text="The Beatles" />

    <TextView
        android:id="@+id/playTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4dp"
        app:layout_constraintTop_toBottomOf="@+id/playAndPause"
        app:layout_constraintBottom_toTopOf="@+id/top_descriptions_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        android:text="00:30" />

    <ImageView
        android:id="@+id/playAndPause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/center_guideline"
        app:layout_constraintBottom_toTopOf="@+id/playTime"
        app:layout_constraintStart_toEndOf="@+id/playlist"
        app:layout_constraintEnd_toStartOf="@+id/addFavourite"
        app:layout_constraintVertical_chainStyle ="packed"
        app:srcCompat="@drawable/ic_button_play"/>

    <ImageView
        android:id="@+id/playlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8dp"
        app:layout_constraintTop_toTopOf="@+id/playAndPause"
        app:layout_constraintBottom_toBottomOf="@+id/playAndPause"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:srcCompat="@drawable/ic_button_playlist" />
    <ImageView
        android:id="@+id/addFavourite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_8dp"
        app:layout_constraintTop_toTopOf="@+id/playAndPause"
        app:layout_constraintBottom_toBottomOf="@+id/playAndPause"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:srcCompat="@drawable/ic_button_add_favorites_inactive" />


    <!--Descriptions -->

    <TextView
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/duration"
        style="@style/DescriptionsTextView"
        app:layout_constraintTop_toBottomOf="@+id/top_descriptions_guideline"
        app:layout_constraintBottom_toTopOf="@+id/album"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintVertical_chainStyle ="spread_inside"
        app:layout_constraintTag="duration"/>

    <TextView
        android:id="@+id/album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/album"
        style="@style/DescriptionsTextView"
        app:layout_constraintTop_toBottomOf="@+id/duration"
        app:layout_constraintBottom_toTopOf="@+id/year"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintTag="album"/>

    <TextView
        android:id="@+id/year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year"
        style="@style/DescriptionsTextView"
        app:layout_constraintTop_toBottomOf="@+id/album"
        app:layout_constraintBottom_toTopOf="@+id/genre"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintTag="year"/>

    <TextView
        android:id="@+id/genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genre"
        style="@style/DescriptionsTextView"
        app:layout_constraintTop_toBottomOf="@+id/year"
        app:layout_constraintBottom_toTopOf="@+id/country"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintTag="genre"/>

    <TextView
        android:id="@+id/country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country"
        style="@style/DescriptionsTextView"
        app:layout_constraintTop_toBottomOf="@+id/genre"
        app:layout_constraintBottom_toBottomOf="@id/bottom_guideline"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintTag="country"/>

    <TextView
        android:id="@+id/durationData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/DescriptionsDataTextView"
        app:layout_constraintBaseline_toBaselineOf="@+id/duration"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        tools:text="5:35" />

    <TextView
        android:id="@+id/albumData"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines = "1"
        style="@style/DescriptionsDataTextView"
        app:layout_constraintBaseline_toBaselineOf="@+id/album"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@id/textsBarrier"
        tools:text="Yesterday (Remastered 2009)"
        android:gravity="end"
        android:layout_marginStart="@dimen/_16dp" />

    <TextView
        android:id="@+id/yearData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/DescriptionsDataTextView"
        app:layout_constraintBaseline_toBaselineOf="@+id/year"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        tools:text="1965" />

    <TextView
        android:id="@+id/genreData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/DescriptionsDataTextView"
        app:layout_constraintBaseline_toBaselineOf="@+id/genre"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        tools:text="Rock" />

    <TextView
        android:id="@+id/countryData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/DescriptionsDataTextView"
        app:layout_constraintBaseline_toBaselineOf="@+id/country"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        tools:text="Великобритания" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/textsBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_tags="album"
        app:barrierDirection="end" />

</androidx.constraintlayout.widget.ConstraintLayout>